@@ -89,6 +89,10 @@ Changes with Apache Libcloud in development
       (LIBCLOUD-404)
       [Markos Gogoulos]
 
+    - Update network related extension methods so they work correctly with
+      both, OpenStack and Rackspace driver. (LIBCLOUD-368)
+      [Tomaz Muraus]
+
   *) Storage
 
     - Allow users to filter objects starting with a prefix by passing ex_prefix
